# rpy2-Matrix

./: .travis.yml  README.md  pyproject.toml  run_linting.sh  run_tests.sh  setup.py
.github/workflows/: pythonpackage.yml  webpages.yml
doc/: conf.py  index.rst  requirements.txt
docs/: index.html
docs/version/master/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/version/master/html/_images/: inheritance-70298036784663c01cd83f48255854b7d1993ec7.png.map  inheritance-823274f123d2441adada1f756f9cc7bf288aaf56.png.map  inheritance-c7a433e82f93ec29f0e5f0d54fb4eceba1d85260.png.map  inheritance-c97f956cf6c8d161f91598109e9e936d748695d5.png.map  inheritance-cf2842057f58327399cbfa1063538534188bf292.png.map
docs/version/master/html/_sources/: index.rst.txt
docs/version/master/html/_static/: bizstyle.js
rpy2_Matrix/: Matrix.py  conversion.py  test_Matrix.py
